--- a/libs.version.toml
+++ b/libs.version.toml
@@ -48,6 +48,7 @@ ktor-server-compression = { module = "io.ktor:ktor-server-compression", version.
 ktor-server-host-common = { module = "io.ktor:ktor-server-host-common-jvm", version.ref = "ktor" }
 ktor-server-status-pages = { module = "io.ktor:ktor-server-status-pages-jvm", version.ref = "ktor" }
 ktor-server-double-receive = { module = "io.ktor:ktor-server-double-receive", version.ref = "ktor" }
+ktor-server-cors = { module = "io.ktor:ktor-server-cors", version.ref = "ktor"}
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
 ktor-client-serialization = { module = "io.ktor:ktor-client-serialization", version.ref = "ktor" }
@@ -76,6 +77,7 @@ ktor-server = [
     "ktor-server-defaultheaders",
     "ktor-server-forwarded",
     "ktor-server-openapi",
+    "ktor-server-cors",
     "ktor-server-compression",
     "ktor-server-call-logging",
     "ktor-server-call-id",
